--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>interval and anonymous function</title>
 </head>
 <style>
+    body {
+    background: url("../brick70.png");
+    }
     #redbox {
         position: absolute;
         left: 100px;
