--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <style>
     body {
-    background: url("../brick70.png");
+    background: url("/brick70.png");
     }
     #redbox {
         position: absolute;
