--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 </style>
 <body>
-<div id="redbox"></div>
+    <div id="redbox"><h1>AVVA</h1></div>
 
 <script>
     var intervalId = null;
