--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         width: 200px;
         height: 200px;
         background-color: red;
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 </style>
 <body>
