--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
     }
 </style>
 <body>
-    <div class="card">
-    <div id="redbox"><h1>AVVA</h1></div>
+    
+    <div id="redbox">
+        <div class="card">
+            <h1>AVVA</h1>
+        </div>
     </div>
 
 <script>
