--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <br>
-    <div id="redbox">
+    <div id="redboxx">
         <div class="card">
             <h1>AVVA</h1>
         </div>
