--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
     body {
-    background: url("/brick70.png");
+    background: url("../brick70.png");
     }
     #redbox {
         position: absolute;
