--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             crossorigin="anonymous"></script>
     body {
         background: url("/brick70.png");
-        background-color: yellow;
-        
+        background-color: powderblue;
     }
     #redbox {
         position: absolute;
