--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         }
     </style>
 </head>
-<body> 
+<body style="background-color:powderblue;"> 
     <div id="redbox">
         <div class="card">
             <h1>AVVA</h1>
