--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
     </style>
 </head>
-<body style="background: "/";"> 
+<body style="background: url(/brick70.phg);"> 
     <div id="redbox">
         <div class="card">
             <h1>AVVA</h1>
