--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
     </style>
 </head>
-<body style="background-image: url("/brick70.png");"> 
+<body style="background-color: powderblue;"> 
     <div id="redbox">
         <div class="card">
             <h1>AVVA</h1>
