--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
               integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
         body {
-            background-img: url("/brick70.png");
+            background-img: url("brick70.png");
         }
    
         #redbox {
@@ -23,7 +23,7 @@
 </head>
 <body> 
     <div id="redbox">
-        <div>
+        <div class="card">
             <h1>AVVA</h1>
         </div>
     </div>
