--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body> 
     <div id="redbox">
-        <div class="container">
+        <div id="redbox">
             <h1>AVVA</h1>
         </div>
     </div>
