--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         body {
             background: url("/brick70.png");
         }
+        
+        h1 {
+             margin: auto;
+        }
    
         #redbox {
             position: absolute;
@@ -23,9 +27,7 @@
 </head>
 <body> 
     <div id="redbox">
-        <div id="redbox">
-            <h1>AVVA</h1>
-        </div>
+        <h1>AVVA</h1>
     </div>
 <script>
     var intervalId = null;
