--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             background: url("/brick70.png");
         }
         
+        img {
+            width: 100%;
+            height: auto;
+        }
+        
         h1 {
              margin: auto;
         }
@@ -27,7 +32,7 @@
 </head>
 <body> 
     <div id="redbox">
-        <h1>AVVA</h1>
+        <img src="/Avvakum.jpg" width="460" height="345">
     </div>
 <script>
     var intervalId = null;
