--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id="redbox">
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
-    <div id="colorredbox"></div>
+    <div id="colorbox"></div>
 <script>
     var intervalId = null;
 
