--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         }
         
         #colorbox {
-            width: 100px;
-            height: 100px;
+            width: 200px;
+            height: 200px;
             background-color: red;
             position: relative;
             -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
@@ -56,7 +56,7 @@
     <div id="redbox">
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
-    <div id="colorbox"></div>
+    <div id="colorbox">avva</div>
 <script>
     var intervalId = null;
 
