--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             width: 200px;
             height: 200px;
             background-color: red;
-            position: absolute;
+            position: relative;
             -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
             -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
             -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
@@ -56,6 +56,7 @@
     <div id="redbox">
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
+    <hr>
     <div id="colorbox">avva</div>
 <script>
     var intervalId = null;
