--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             width: 200px;
             height: 200px;
             background-color: red;
-            position: relative;
+            position: absolute;
+            left: 100px;
+            top: 600px;
             -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
             -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
             -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
