--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
             box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
         
+        #redbox1 {
+            position: absolute;
+            left: 100px;
+            top: 600px;
+            width: 200px;
+            height: 200px;
+            background-color: black;
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+        
         #colorbox {
             width: 200px;
             height: 200px;
@@ -56,6 +66,9 @@
 </head>
 <body> 
     <div id="redbox">
+        <img src="/Avvakum.jpg" width="460" height="345">
+    </div>
+        <div id="redbox1">
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
     <hr>
