--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             width: 200px;
             height: 200px;
             background-color: red;
-            position: relative;
+            position: absolute;
             left: 100px;
-            top: 1600px;
+            top: 600px;
             -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
             -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
             -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
@@ -57,7 +57,7 @@
         /* Standard syntax */
         @keyframes example {
             0%   {background-color:red; left:0px; top:0px;}
-            25%  {background-color:yellow; left:200px; top:0px;}
+            25%  {background: url("/brick70.png"); left:200px; top:0px;}
             50%  {background-color:blue; left:200px; top:200px;}
             75%  {background-color:green; left:0px; top:200px;}
             100% {background-color:red; left:0px; top:0px;}
@@ -77,6 +77,7 @@
     var intervalId = null;
 
     document.getElementById('redbox').addEventListener('click', startBox, false);
+    document.getElementById('redbox1').addEventListener('click', startBox, false);
 
     function startBox() {
         if (intervalId == null) {
