--- a/index.html
+++ b/index.html
@@ -40,18 +40,19 @@
         }
         
         #colorbox {
-            width: 200px;
-            height: 200px;
-            background-color: red;
             position: absolute;
             left: 100px;
             top: 600px;
+            width: 200px;
+            height: 200px;
+            background-color: red;
             -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
             -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
             -webkit-animation-iteration-count: infinite; /* Safari 4.0 - 8.0 */
             animation-name: example;
             animation-duration: 4s;
             animation-iteration-count: infinite;
+            box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
         
         /* Standard syntax */
