--- a/index.html
+++ b/index.html
@@ -59,26 +59,26 @@
         @keyframes example {
             0%   {background-color:red; left:0px; top:0px;}
             25%  {background: url("/brick70.png"); left:200px; top:0px;}
-            50%  {background-color:blue; left:200px; top:200px;}
+            50%  {background: url("Avvakum.jpg"); left:200px; top:200px;}
             75%  {background-color:green; left:0px; top:200px;}
             100% {background-color:red; left:0px; top:0px;}
         }
     </style>
 </head>
 <body> 
+    
     <div id="redbox">
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
     <div id="redbox1">
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
-    <hr>
     <div id="colorbox">avva</div>
 <script>
     var intervalId = null;
 
     document.getElementById('redbox').addEventListener('click', startBox, false);
-    document.getElementById('redbox1').addEventListener('click', startBox, false);
+    document.getElementById('redbox1').addEventListener('click', startBox1, false);
 
     function startBox() {
         if (intervalId == null) {
@@ -88,6 +88,20 @@
                     x += 5;
                     var left = x + "px";
                     document.getElementById("redbox").style.left = left;
+                }, 100);
+        } else {
+            clearInterval(intervalId);
+            intervalId = null;
+        }
+    }
+    
+        function startBox1() {
+        if (intervalId == null) {
+            var x = 100;
+            intervalId = setInterval(
+                function () {
+                    x += 5;
+                    var left = x + "px";
                     document.getElementById("redbox1").style.left = left;
                 }, 100);
         } else {
