--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             position: absolute;
             left: 100px;
             top: 600px;
-            width: 200px;
-            height: 200px;
+            width: 150px;
+            height: 150px;
             background-color: red;
             -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
             -webkit-animation-duration: 4s; /* Safari 4.0 - 8.0 */
@@ -57,11 +57,11 @@
         
         /* Standard syntax */
         @keyframes example {
-            0%   {background-color:red; left:0px; top:0px;}
-            25%  {background: url("/brick70.png"); left:200px; top:0px;}
-            50%  {background: url("Avvakum.jpg"); left:200px; top:200px;}
-            75%  {background-color:green; left:0px; top:200px;}
-            100% {background-color:red; left:0px; top:0px;}
+            0%   {background-color:red; left:100px; top:600px;}
+            25%  {background: url("/brick70.png"); left:300px; top:600px;}
+            50%  {background-color:blue; left:300px; top:800px;}
+            75%  {background-color:green; left:100px; top:800px;}
+            100% {background-color:red; left:100px; top:600px;}
         }
     </style>
 </head>
