--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         #redbox1 {
             position: absolute;
             left: 100px;
-            top: 700px;
+            top: 750px;
             width: 200px;
             height: 200px;
             background-color: black;
@@ -59,7 +59,7 @@
         @keyframes example {
             0%   {background-color:black; left:100px; top:300px;}
             25%  {background: url("/brick70.png"); left:300px; top:300px;}
-            50%  {background-color:gray; left:300px; top:500px;}
+            50%  {background-color:green; left:300px; top:500px;}
             75%  {background-color:blue; left:100px; top:500px;}
             100% {background-color:black; left:100px; top:300px;}
         }
@@ -73,7 +73,7 @@
     <div id="redbox1">
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
-    <div id="colorbox">avva</div>
+    <div id="colorbox"><img src="/Avvakum.jpg" width="460" height="345"></div>
 <script>
     var intervalId = null;
 
