--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         /* Standard syntax */
         @keyframes example {
             0%   {background-color:black; left:100px; top:300px;}
-            25%  {background: url("/brick70.png"); left:300px; top:300px;}
-            50%  {background-color:green; left:300px; top:500px;}
-            75%  {background-color:blue; left:100px; top:500px;}
+            25%  {background-color:#595142; left:300px; top:300px;}
+            50%  {background-color:#745d46; left:300px; top:500px;}
+            75%  {background-color:#ac7e54; left:100px; top:500px;}
             100% {background-color:black; left:100px; top:300px;}
         }
     </style>
