--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
     <div id="redbox1">
-        <img src="/Avvakum.jpg" width="460" height="345">
+        <img src="/DDD.jpg" width="460" height="345">
     </div>
     <div id="colorbox"><img src="/Avvakum.jpg" width="460" height="345"></div>
 <script>
