--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
               integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
         body {
-            background: url("/brick70.png");
+            background: url("/Artboard 6DDD0.5.jpg");
         }
         
         img {
@@ -74,7 +74,7 @@
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
     <div id="redbox1">
-        <img src="/6DDD0.5.jpg" width="960" height="540">
+        <img src="/Artboard 6DDD0.5.jpg" width="960" height="540">
     </div>
     <div id="colorbox"><img src="/Avvakum.jpg" width="460" height="345"></div>
     <br>
