--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <img src="/Avvakum.jpg" width="460" height="345">
     </div>
     <div id="redbox1">
-        <img src="/Artboard 6DDD0.5.jpg" width="960" height="540">
+        <img src="/Avvakum.jpg" width="960" height="540">
     </div>
     <div id="colorbox"><img src="/Avvakum.jpg" width="460" height="345"></div>
     <br>
