--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
               integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
         body {
-            background: url("/brick70.jpg");
+            background: url("/D2Tails.jpg");
         }
         
         img {
