--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>   
     <div id="redbox">
-        <img src="/Avvakum.jpg" width="460" height="345">
+        <img src="/D2Tails.jpg" width="460" height="345">
     </div>
     <div id="redbox1">
         <img src="/Avvakum.jpg" width="460" height="345">
