--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
               integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
         body {
-            background: url("/D2Tails.jpg");
+            background: url("/brick70.jpg");
         }
         
         img {
@@ -67,7 +67,7 @@
 </head>
 <body>   
     <div id="redbox">
-        <img src="/D2Tails.jpg" width="460" height="345">
+        <img src="/Avvakum.jpg" width="460" height="345">
     </div>
     <div id="redbox1">
         <img src="/Avvakum.jpg" width="460" height="345">
